<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=
        ".MenuExampleActivity">
    <item
        android:id="@+id/menu_history"
        android:orderInCategory="1"
        app:showAsAction="never"
        android:title="@string/history_string"/>
    <item
        android:id="@+id/menu_vibrate"
        android:orderInCategory="2"
        app:showAsAction="never"
        android:checkable="true"
        android:title="@string/vibrate_string"/>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_rad"
            android:orderInCategory="3"
            app:showAsAction="never"
            android:title="@string/rad_string"/>
        <item
            android:id="@+id/menu_deg"
            android:orderInCategory="4"
            app:showAsAction="never"
            android:title="@string/deg_string"/>
    </group>
    <item
        android:id="@+id/menu_about"
        android:orderInCategory="5"
        app:showAsAction="never"
        android:title="@string/about_string"/>
</menu>
