<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.friketrin.calc.MainActivity"
    android:background="#0b0505">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/initDisplay"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="10dp"
        android:enabled="false"
        android:gravity="end"
        android:inputType="number|numberDecimal"
        android:textSize="@dimen/abc_text_size_headline_material"
        android:textColor="#dc0000" />

    <Button
        android:text="@string/button7"
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:enabled="true"
        android:textColor="#ff0000"
        android:minWidth="@dimen/activity_num_button_width"
        android:onClick="sendMessage"
        style="?android:attr/borderlessButtonStyle"
        android:textStyle="bold"
        android:layout_alignTop="@+id/button8"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button8"
        android:id="@+id/button8"
        android:clickable="true"
        android:enabled="true"
        android:textColor="#ff0000"
        android:minWidth="@dimen/activity_num_button_width"
        android:onClick="sendMessage"
        style="?android:attr/borderlessButtonStyle"
        android:textStyle="bold"
        android:layout_marginTop="93dp"
        android:layout_below="@+id/textView"
        android:layout_toRightOf="@+id/button7"
        android:layout_toEndOf="@+id/button7" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button9"
        android:id="@+id/button9"
        android:clickable="true"
        android:enabled="true"
        android:textColor="#ff0000"
        android:minWidth="@dimen/activity_num_button_width"
        android:onClick="sendMessage"
        style="?android:attr/borderlessButtonStyle"
        android:textStyle="bold"
        android:layout_above="@+id/button6"
        android:layout_alignLeft="@+id/button6"
        android:layout_alignStart="@+id/button6" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button4"
        android:id="@+id/button4"
        android:clickable="true"
        android:enabled="true"
        android:textColor="#ff0000"
        android:layout_below="@+id/button7"
        android:layout_alignLeft="@+id/button7"
        android:layout_alignStart="@+id/button7"
        android:minWidth="@dimen/activity_num_button_width"
        android:onClick="sendMessage"
        style="?android:attr/borderlessButtonStyle"
        android:textStyle="bold" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button5"
        android:id="@+id/button5"
        android:clickable="true"
        android:enabled="true"
        android:textColor="#ff0000"
        android:layout_alignTop="@+id/button4"
        android:layout_alignLeft="@+id/button8"
        android:layout_alignStart="@+id/button8"
        android:minWidth="@dimen/activity_num_button_width"
        android:onClick="sendMessage"
        style="?android:attr/borderlessButtonStyle"
        android:textStyle="bold" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button6"
        android:id="@+id/button6"
        android:clickable="true"
        android:enabled="true"
        android:textColor="#ff0000"
        android:layout_alignTop="@+id/button5"
        android:layout_toRightOf="@+id/button5"
        android:layout_toEndOf="@+id/button5"
        android:minWidth="@dimen/activity_num_button_width"
        android:onClick="sendMessage"
        style="?android:attr/borderlessButtonStyle"
        android:textStyle="bold" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button1"
        android:id="@+id/button1"
        android:clickable="true"
        android:enabled="true"
        android:textColor="#ff0000"
        android:layout_below="@+id/button4"
        android:layout_alignLeft="@+id/button4"
        android:layout_alignStart="@+id/button4"
        android:minWidth="@dimen/activity_num_button_width"
        android:onClick="sendMessage"
        style="?android:attr/borderlessButtonStyle"
        android:textStyle="bold" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button2"
        android:id="@+id/button2"
        android:clickable="true"
        android:enabled="true"
        android:textColor="#ff0000"
        android:layout_below="@+id/button5"
        android:layout_alignLeft="@+id/button5"
        android:layout_alignStart="@+id/button5"
        android:minWidth="@dimen/activity_num_button_width"
        android:onClick="sendMessage"
        style="?android:attr/borderlessButtonStyle"
        android:textStyle="bold" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button3"
        android:id="@+id/button3"
        android:clickable="true"
        android:enabled="true"
        android:textColor="#ff0000"
        android:layout_below="@+id/button5"
        android:layout_toRightOf="@+id/button2"
        android:layout_toEndOf="@+id/button2"
        android:minWidth="@dimen/activity_num_button_width"
        android:onClick="sendMessage"
        style="?android:attr/borderlessButtonStyle"
        android:textStyle="bold" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button0"
        android:id="@+id/button0"
        android:clickable="true"
        android:enabled="true"
        android:textColor="#ff0000"
        android:layout_below="@+id/button2"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignStart="@+id/button2"
        android:minWidth="@dimen/activity_num_button_width"
        android:onClick="sendMessage"
        style="?android:attr/borderlessButtonStyle"
        android:textStyle="bold" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonDot"
        android:id="@+id/buttonDot"
        android:clickable="true"
        android:enabled="true"
        android:textColor="#ff0000"
        android:layout_alignTop="@+id/button0"
        android:layout_toRightOf="@+id/button0"
        android:layout_toEndOf="@+id/button0"
        android:minWidth="@dimen/activity_num_button_width"
        android:onClick="sendMessage"
        style="?android:attr/borderlessButtonStyle"
        android:textStyle="bold" />

    <Button
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonPlusMinus"
        android:id="@+id/buttonPlusMinus"
        android:clickable="true"
        android:enabled="true"
        android:textColor="#ff0000"
        android:minWidth="@dimen/activity_num_button_width"
        android:onClick="sendMessage"
        android:textStyle="bold"
        android:layout_below="@+id/button1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        style="?android:attr/borderlessButtonStyle"
        android:text="@string/buttonClear"
        android:id="@+id/buttonClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:enabled="true"
        android:textColor="#ff0000"
        android:minWidth="@dimen/activity_num_button_width"
        android:onClick="sendMessage"
        android:textStyle="bold"
        android:layout_above="@+id/buttonPi"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/button8"
        android:layout_alignEnd="@+id/button8" />

    <Button
        style="?android:attr/borderlessButtonStyle"
        android:text="@string/buttonPi"
        android:id="@+id/buttonPi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:enabled="true"
        android:textColor="#ff0000"
        android:minWidth="@dimen/activity_num_button_width"
        android:onClick="sendMessage"
        android:layout_above="@+id/button7"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonDivide"
        android:id="@+id/buttonDivide"
        android:clickable="true"
        android:enabled="true"
        android:textColor="#ff0000"
        android:minWidth="@dimen/activity_num_button_width"
        android:onClick="sendMessage"
        android:textStyle="bold"
        android:layout_above="@+id/buttonTimes"
        android:layout_toRightOf="@+id/button9"
        android:layout_toEndOf="@+id/button9" />

    <Button
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonTimes"
        android:id="@+id/buttonTimes"
        android:clickable="true"
        android:enabled="true"
        android:textColor="#ff0000"
        android:minWidth="@dimen/activity_num_button_width"
        android:onClick="sendMessage"
        android:textStyle="bold"
        android:layout_alignTop="@+id/button9"
        android:layout_alignLeft="@+id/buttonDivide"
        android:layout_alignStart="@+id/buttonDivide" />

    <Button
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonMinus"
        android:id="@+id/buttonMinus"
        android:clickable="true"
        android:enabled="true"
        android:textColor="#ff0000"
        android:minWidth="@dimen/activity_num_button_width"
        android:onClick="sendMessage"
        android:textStyle="bold"
        android:layout_below="@+id/buttonTimes"
        android:layout_alignLeft="@+id/buttonTimes"
        android:layout_alignStart="@+id/buttonTimes" />

    <Button
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonPlus"
        android:id="@+id/buttonPlus"
        android:clickable="true"
        android:enabled="true"
        android:textColor="#ff0000"
        android:minWidth="@dimen/activity_num_button_width"
        android:onClick="sendMessage"
        android:textStyle="bold"
        android:layout_below="@+id/buttonMinus"
        android:layout_alignLeft="@+id/buttonMinus"
        android:layout_alignStart="@+id/buttonMinus" />

    <Button
        style="?android:attr/borderlessButtonStyle"
        android:text="@string/buttonEval"
        android:id="@+id/buttonEval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:enabled="true"
        android:textColor="#ff0000"
        android:minWidth="@dimen/activity_num_button_width"
        android:onClick="sendMessage"
        android:textStyle="bold"
        android:layout_below="@+id/buttonPlus"
        android:layout_alignLeft="@+id/buttonPlus"
        android:layout_alignStart="@+id/buttonPlus"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView" />

    <Button
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonLpar"
        android:id="@+id/buttonLpar"
        android:clickable="true"
        android:enabled="true"
        android:textColor="#ff0000"
        android:minWidth="@dimen/activity_num_button_width"
        android:onClick="sendMessage"
        android:textStyle="bold"
        android:layout_alignBottom="@+id/buttonPi"
        android:layout_toRightOf="@+id/buttonPi"
        android:layout_toEndOf="@+id/buttonPi" />
    <Button
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonRpar"
        android:id="@+id/buttonRpar"
        android:clickable="true"
        android:enabled="true"
        android:textColor="#ff0000"
        android:minWidth="@dimen/activity_num_button_width"
        android:onClick="sendMessage"
        android:textStyle="bold"
        android:layout_alignBottom="@+id/buttonLpar"
        android:layout_toRightOf="@+id/buttonLpar"
        android:layout_toEndOf="@+id/buttonLpar" />

    <Button
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonBackspace"
        android:id="@+id/buttonBackspace"
        android:clickable="true"
        android:enabled="true"
        android:textColor="#ff0000"
        android:textStyle="bold"
        android:minWidth="@dimen/activity_num_button_width"
        android:onClick="sendMessage"
        android:layout_alignBottom="@+id/buttonClear"
        android:layout_toRightOf="@+id/buttonClear"
        android:layout_toLeftOf="@+id/buttonDivide"
        android:layout_toStartOf="@+id/buttonDivide" />

    <Button
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonSin"
        android:id="@+id/buttonSin"
        android:clickable="true"
        android:enabled="true"
        android:textColor="#ff0000"
        android:minWidth="@dimen/activity_num_button_width"
        android:onClick="sendMessage"
        android:textStyle="italic"
        android:textAllCaps="false"
        android:layout_below="@+id/buttonMinus"
        android:layout_toRightOf="@+id/buttonMinus"
        android:textSize="12sp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonLog10"
        android:id="@+id/buttonLog10"
        android:clickable="true"
        android:enabled="true"
        android:textColor="#ff0000"
        android:minWidth="@dimen/activity_num_button_width"
        android:onClick="sendMessage"
        android:textStyle="italic"
        android:textAllCaps="false"
        android:layout_above="@+id/buttonSin"
        android:layout_toRightOf="@+id/buttonTimes"
        android:textSize="10sp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonExp"
        android:id="@+id/buttonExp"
        android:clickable="true"
        android:enabled="true"
        android:textColor="#ff0000"
        android:minWidth="@dimen/activity_num_button_width"
        android:onClick="sendMessage"
        android:textStyle="italic"
        android:textAllCaps="false"
        android:layout_above="@+id/buttonLog10"
        android:layout_toRightOf="@+id/buttonDivide"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <!--goodie to try: <sup><small>your-string</small></sup>-->

</RelativeLayout>
